Fixed secondary links and action links alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -138,9 +138,20 @@ div#toolbar div.toolbar-shortcuts ul {
   }
 }
 
+.secondary-tabs {
+  li,
+  li a {
+    float: none;
+  }
+}
+
 ul.links li, 
 ul.links li a {
   float: none;
+}
+
+ul.action-links li {
+  float: left;
 }
 
 ul.primary-tabs.links {
